# Modelsaur

./: .gitignore  LICENSE  README.md
android/app/: CMakeLists.txt  build.gradle
android/app/libpng-1.6.34/: Android.mk  config.status  libtool
android/app/libpng-1.6.34/tmp/: png-ext-cfgcmd.txt
android/app/src/androidTest/java/com/orthopteroid/modelsaur/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/orthopteroid/modelsaur/: BlobActivity.java
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/test/java/com/orthopteroid/modelsaur/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
linux/: CMakeLists.txt
src/: App.cpp  AppFile.hpp  AppKeyboard.cpp  AppKeyboard.hpp  AppLog.hpp  AppML.cpp  AppML.hpp  AppNormalBrusher.cpp  AppNormalBrusher.hpp  AppPlatform.hpp  AppTexture.cpp  AppTexture.hpp  AppTime.cpp  AppTime.hpp  AppTriBrusher.cpp  AppTriBrusher.hpp  AppTutorial.cpp  AppTutorial.hpp  AppTypes.hpp  CRubus.cpp  CRubus.hpp  GL9.hpp  GL9Common.cpp  RColorPicker.cpp  RColorPicker.hpp  RIcosahedron.cpp  RIcosahedron.hpp  RMenu.cpp  RMenu.hpp  RSimpleTri.cpp  RSimpleTri.hpp  RSphere.cpp  RSphere.hpp  RTetrahedron.cpp  RTetrahedron.hpp  RText.cpp  RText.hpp  TriTools.cpp  TriTools.hpp
src/Android/: GL9GLES2.cpp  Platform.cpp  PlatformFile.cpp  PlatformLog.cpp  android_native_app_glue.c  fmemopen.cpp
src/Linux/: GL9GLES2.cpp  GL9OGL1.cpp  Platform.cpp  PlatformFile.cpp  PlatformLog.cpp
src/cold-storage/: _AndroidFile.cpp  _AndroidFile.hpp  _AndroidGL9State.hpp  _AndroidPlatform (copy 1).cpp  _AppGesture.cpp  _AppGesture.hpp  _AppPatchBrusher.cpp  _AppPatchBrusher.hpp  _AppPlatformLinux_gles2.cpp  _AppPlatformLinux_ogl1.cpp  _CRubus (copy 1).cpp  _GL9LinuxOGL1.hpp  _GL9LinuxOGLES2.hpp  _LinuxGL9State.hpp  _PlatImpl.hpp  _RHelix.cpp  _RHelix.hpp  _RMenu (copy).cpp  _RSphereLinux.cpp  _inspirationalBinStuff.txt  _oglTypes.hpp
